--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,5 +28,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    min-height: 100vh;
+    overflow-x: hidden;
     
 }
